
[project]
name = "DatPlot"
version = "2024.0.0"
readme = "README.md"
dependencies = [
    "polars",
    "numpy",
    "pendulum",
    "loguru",
    "icecream",
    "nicegui",
    "pywebview",
    "scipy",
    "plotly",
    "pywebview",
    "pendulum",
    "kaleido == 0.2.1",
    "appdirs",
    "toml",
    "pyinstaller",
    "pynput",
]

[project.scripts]
datplot = "datPlot:init_gui"

[tool.uv]
package = true

[tool.rye]
managed = true
dev-dependencies = ["ptpython"]
