
[project]
name = "DatPlot"
version = "2024.0.0"
readme = "README.md"
dependencies = [
    "polars",
    "numpy",
    "pendulum",
    "loguru",
    "icecream",
    "nicegui",
    "pywebview",
    "scipy",
    "plotly",
    "pywebview",
    "pendulum",
    "kaleido == 0.2.1",
    "appdirs",
    "toml",
    "pyinstaller",
    "pynput",
]

[project.scripts]
datplot = "datPlot:init_gui"

[tool.uv]
package = true

[tool.taskipy.tasks]
exe = "del dist\\datPlot.exe && PyInstaller --windowed --icon=toy.ico --onefile --hidden-import numpy --collect-all nicegui src/datPlot.py"

[tool.rye]
managed = true
dev-dependencies = ["ptpython"]

[dependency-groups]
dev = [
    "taskipy>=1.14.1",
]
